[gd_scene load_steps=16 format=2]

[ext_resource path="res://enemies/script/enemy.gd" type="Script" id=1]
[ext_resource path="res://assets/common/light.png" type="Texture" id=2]
[ext_resource path="res://enemies/enemy/le messant.png" type="Texture" id=3]
[ext_resource path="res://assets/common/sound/sfx_shocked.ogg" type="AudioStream" id=4]
[ext_resource path="res://enemies/script/LifeController.tscn" type="PackedScene" id=5]

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "wak",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=6]
radius = 15.0

[sub_resource type="Gradient" id=4]
offsets = PoolRealArray( 0, 0.353982, 1 )
colors = PoolColorArray( 1, 0, 0, 1, 0.822559, 0.591214, 0.591214, 1, 0.823529, 0.592157, 0.592157, 0 )

[sub_resource type="GradientTexture" id=5]
gradient = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=3]
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 231.94
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 10.73
color = Color( 0.698039, 0.0313726, 1, 1 )
color_ramp = SubResource( 5 )

[sub_resource type="Animation" id=12]
resource_name = "Shrink light"
tracks/0/type = "value"
tracks/0/path = NodePath("Light2D:texture_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, -2 ),
"update": 0,
"values": [ 0.13, 0.01 ]
}

[sub_resource type="CircleShape2D" id=7]
radius = 5.09902

[node name="enemy" type="KinematicBody2D" groups=["enemy", "wall"]]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 1.3, 1.3 )
frames = SubResource( 8 )
animation = "wak"

[node name="Area2D" type="Area2D" parent="." groups=["enemy"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 3 )
shape = SubResource( 6 )

[node name="Particles2D" type="Particles2D" parent="."]
emitting = false
amount = 14
lifetime = 0.46
one_shot = true
explosiveness = 0.76
process_material = SubResource( 3 )

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 2 )
texture_scale = 0.13
color = Color( 0.709804, 0, 1, 1 )
energy = 0.8

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
"anims/Shrink light" = SubResource( 12 )

[node name="DeathSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -15.0

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2( 0, 3 )
shape = SubResource( 7 )

[node name="LifeController" parent="." instance=ExtResource( 5 )]
MAXLIFE = 2

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
